@@ -3,6 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <dependencies>
+    </dependencies>
 
     <parent>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -14,12 +16,13 @@
     <artifactId>Discovery_Points</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <description>This is the Account System</description>
     <modules>
         <module>AccountSystemDomain</module>
         <module>AccountSystemLogic</module>
         <module>AccountSystemRepository</module>
         <module>AccountSystemTranslator</module>
-        <module>AccountSystemWebSpringBoot</module>
+        <module>AccountSystemSpringBootWeb</module>
     </modules>
 
     <properties>
@@ -29,9 +32,8 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-web</artifactId>
-                <version>5.3.9</version>
+                <groupId>za.ac.nwu.dp</groupId>
+                <artifactId>AccountSystemDomain</artifactId>
             </dependency>
             <dependency>
                 <groupId>io.springfox</groupId>
@@ -49,6 +51,21 @@
                 </exclusions>
             </dependency>
             <dependency>
+                <groupId>za.ac.nwu.ac</groupId>
+                <artifactId>AccountSystemDomain</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>za.ac.nwu.ac</groupId>
+                <artifactId>AccountSystemLogic</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+            </dependency>
+
+            <dependency>
                 <groupId>io.swagger</groupId>
                 <artifactId>swagger-annotations</artifactId>
                 <version>${swagger.version}</version>
@@ -64,16 +81,17 @@
                 <version>1.0</version>
             </dependency>
             <dependency>
-                <groupId>com.oracle.database.jdbc</groupId>
-                <artifactId>ojdbc8</artifactId>
-            </dependency>
-            <dependency>
                 <groupId>com.oracle.database.ha</groupId>
                 <artifactId>ons</artifactId>
             </dependency>
             <dependency>
                 <groupId>com.oracle.database.jdbc</groupId>
                 <artifactId>ucp</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>com.oracle.database.jdbc</groupId>
+                <artifactId>ojdbc10</artifactId>
+                <version>19.12.0.0</version>
             </dependency>
 
 
@@ -88,17 +106,6 @@
                 <artifactId>javafx-controls</artifactId>
                 <version>18-ea+3</version>
             </dependency>
-            <dependency>
-                <groupId>com.oracle</groupId>
-                <artifactId>ojdbc7</artifactId>
-                <version>12.1.0.2</version>
-            </dependency>
-
-            <dependency>
-                <groupId>za.ac.nwu.dp</groupId>
-                <artifactId>AccountSystemDomain</artifactId>
-            </dependency>
-
             <dependency>
                 <groupId>za.ac.nwu.dp</groupId>
                 <artifactId>AccountSystemLogic</artifactId>
@@ -119,11 +126,6 @@
                 <artifactId>hibernate-core</artifactId>
                 <version>5.4.3.Final</version>
             </dependency>
-            <dependency>
-            <groupId>com.oracle.database.jdbc</groupId>
-            <artifactId>ojdbc10</artifactId>
-            <version>19.12.0.0</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -132,12 +134,27 @@
         <pluginManagement>
         <plugins>
             <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.5.5</version>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
                     <source>15</source>
                     <target>15</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
 
